# AI_sara

./: AI_assistan.ipynb  README.md  main.py  models.py  requirements.txt  test_transformers.py
latest_ai_development/: app.py  report.md
marketing_strategy/: .env.example
myproject/: README.md  pyproject.toml
myproject/src/myproject/: crew.py  main.py
